change setting control

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=123456789
 SESSION_SECRET=a_very_secret_key_for_sessions
 PORT=3000
+NGROK_AUTHTOKEN=2xfxQFfbq0G2fyxj81OR5tDi5DW_5if6QYZwjWQKPZuaXCa81
